Setting up linking to work properly.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 ---
-<button id="start" onclick="document.location.href = '/001'">Start</button>
+<button id="start" onclick="document.location.href = '/questions/001.html'">Start</button>
 
 
 
